welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:9: error: not found: value l
    if (abs==l-1){
             ^